WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161577
[Cocoa] Wrapping XPC service execution in os_activity is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=161577
Summary
[Cocoa] Wrapping XPC service execution in os_activity is no longer needed
mitz
Reported
2016-09-04 10:40:59 PDT
[Cocoa] Wrapping XPC service execution in os_activity is no longer needed
Attachments
Remove os_activity code
(7.00 KB, patch)
2016-09-04 10:42 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2016-09-04 10:42:13 PDT
Created
attachment 287914
[details]
Remove os_activity code
WebKit Commit Bot
Comment 2
2016-09-04 11:13:53 PDT
Comment on
attachment 287914
[details]
Remove os_activity code Clearing flags on attachment: 287914 Committed
r205420
: <
http://trac.webkit.org/changeset/205420
>
WebKit Commit Bot
Comment 3
2016-09-04 11:13:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug