[Cocoa] Wrapping XPC service execution in os_activity is no longer needed https://bugs.webkit.org/show_bug.cgi?id=161577

Reviewed by Sam Weinig.

Removed code that created an os_activity around the execution of the XPC service
code, because this workaround is no longer needed.

* DatabaseProcess/EntryPoint/mac/XPCService/DatabaseServiceEntryPoint.mm:
(DatabaseServiceInitializer):
* NetworkProcess/EntryPoint/mac/XPCService/NetworkServiceEntryPoint.mm:
(NetworkServiceInitializer):
* PluginProcess/EntryPoint/mac/XPCService/PluginServiceEntryPoint.mm:
(PluginServiceInitializer):
* WebProcess/EntryPoint/mac/XPCService/WebContentServiceEntryPoint.mm:
(WebContentServiceInitializer):


Canonical link: https://commits.webkit.org/179752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205420 268f45cc-cd09-0410-ab3c-d52691b4dbfc