Source/WebKit2/DatabaseProcess/EntryPoint/mac/XPCService/DatabaseServiceEntryPoint.mm
@@ -30,29 +30,11 @@
 #import "WKBase.h"
 #import "XPCServiceEntryPoint.h"
 
-#if HAVE(OS_ACTIVITY)
-#include <os/activity.h>
-#endif
-
 using namespace WebKit;
 
 extern "C" WK_EXPORT void DatabaseServiceInitializer(xpc_connection_t connection, xpc_object_t initializerMessage, xpc_object_t priorityBoostMessage);
 
 void DatabaseServiceInitializer(xpc_connection_t connection, xpc_object_t initializerMessage, xpc_object_t priorityBoostMessage)
 {
-#if HAVE(OS_ACTIVITY)
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wdeprecated-declarations"
-    os_activity_t activity = os_activity_start("com.apple.WebKit.Databases", OS_ACTIVITY_FLAG_DEFAULT);
-#pragma clang diagnostic pop
-#endif
-
     XPCServiceInitializer<DatabaseProcess, XPCServiceInitializerDelegate>(adoptOSObject(connection), initializerMessage, priorityBoostMessage);
-
-#if HAVE(OS_ACTIVITY)
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wdeprecated-declarations"
-    os_activity_end(activity);
-#pragma clang diagnostic pop
-#endif
 }
