Source/WebKit2/NetworkProcess/EntryPoint/mac/XPCService/NetworkServiceEntryPoint.mm
@@ -30,10 +30,6 @@
 #import "WKBase.h"
 #import "XPCServiceEntryPoint.h"
 
-#if HAVE(OS_ACTIVITY)
-#include <os/activity.h>
-#endif
-
 namespace WebKit {
 
 class NetworkServiceInitializerDelegate : public XPCServiceInitializerDelegate {
@@ -55,20 +51,5 @@ void NetworkServiceInitializer(xpc_connection_t connection, xpc_object_t initial
     // Remove the SecItemShim from the DYLD_INSERT_LIBRARIES environment variable so any processes spawned by
     // the this process don't try to insert the shim and crash.
     EnvironmentUtilities::stripValuesEndingWithString("DYLD_INSERT_LIBRARIES", "/SecItemShim.dylib");
-
-#if HAVE(OS_ACTIVITY)
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wdeprecated-declarations"
-    os_activity_t activity = os_activity_start("com.apple.WebKit.Networking", OS_ACTIVITY_FLAG_DEFAULT);
-#pragma clang diagnostic pop
-#endif
-
     XPCServiceInitializer<NetworkProcess, NetworkServiceInitializerDelegate>(adoptOSObject(connection), initializerMessage, priorityBoostMessage);
-
-#if HAVE(OS_ACTIVITY)
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wdeprecated-declarations"
-    os_activity_end(activity);
-#pragma clang diagnostic pop
-#endif
 }
